--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0"
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "internal-nav-helper": "^3.1.0"
   }
 }
